@@ -1,5 +1,5 @@
 #HSQL Database Engine
-#Thu Nov 28 10:37:07 CET 2013
+#Fri Nov 29 13:31:57 CET 2013
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
