@@ -77,13 +77,14 @@
 			.getParameter("module"), "xava.portlet.uploadActionURL")) != null);
 
 	Module.setPortlet(isPortlet);
+	boolean htmlHead = isPortlet?false:!Is.equalAsStringIgnoreCase(request.getParameter("htmlHead"), "false");
 	String version = org.openxava.controller.ModuleManager.getVersion();
 	String realPath = request.getSession().getServletContext()
 			.getRealPath("/");			
 %>
 <jsp:include page="execute.jsp"/>
 <%
-	if (!isPortlet) {
+	if (htmlHead) {	
 %>
  
 <!DOCTYPE html>
@@ -177,7 +178,7 @@
 		}   
 	</script>
 <%
-	if (!isPortlet) {
+	if (htmlHead) { 	
 %>
 </head> 
 <body bgcolor="#ffffff">
@@ -244,7 +245,7 @@ if (manager.isResetFormPostNeeded()) {
 	</div>	
 	<% } %>	
 <%
-	if (!isPortlet) {
+	if (htmlHead) { 	
 %>
 <%=style.getNoPortalModuleEndDecoration()%>
 </body>
